--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "creatvstudio/itexmo": "^0.2.4",
+        "doctrine/dbal": "^2.12",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.0",
@@ -20,8 +21,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "2.4",
         "laravelcollective/html": "^6.2",
-        "pusher/pusher-php-server": "v4.1.1",
         "maatwebsite/excel": "^3.1",
+        "pusher/pusher-php-server": "v4.1.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-medialibrary": "^7.0.0",
         "spatie/laravel-permission": "^4.0",
